force-app/main/default/objects/Nylas_V3_Setting__mdt/Nylas_V3_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Nylas API V3 Apex SDK.</description>
    <label>Nylas V3 Setting</label>
    <pluralLabel>Nylas V3 Settings</pluralLabel>
</CustomObject>