force-app/main/default/objects/Nylas_V3_Setting__mdt/fields/Callback_URI__c.field-meta.xml
<CustomField>
    <fullName>Callback_URI__c</fullName>
    <description>Nylas hosted auth callback URI which handles the verification of newly created grants.</description>
    <label>Callback URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>