force-app/main/default/objects/Nylas_V3_Setting__mdt/fields/Nylas_API_Secret__c.field-meta.xml
<CustomField>
    <fullName>Nylas_API_Secret__c</fullName>
    <label>Nylas API Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>