force-app/main/default/objects/Nylas_V3_Setting__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region which API requests will be routed to.</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>